Updated insights and final thoughts section.

--- a/HealthCareReviews.ipynb
+++ b/HealthCareReviews.ipynb
@@ -596,9 +596,7 @@
   {
    "cell_type": "markdown",
    "id": "ae4715d5-afed-414f-a417-093c3e382076",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Model Building :"
    ]
@@ -1468,9 +1466,7 @@
   {
    "cell_type": "markdown",
    "id": "fa2817f4-9a6f-4c29-9191-46e6f253343b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## EDA :"
    ]
@@ -3656,6 +3652,7 @@
    "metadata": {},
    "source": [
     "Final Thoughts :\n",
+    "  - The dataset has just 9 statements in Review Text column which has been segmented into all 3 classes(+ve, -ve and neutral) - Looks like a toy dataset. So, the model is not performing properly. Therefore, we are not able to retrieve insights from the data.\n",
     "  - People are satisifed with the healthcare provider(doctor).\n",
     "  - They are willing to come back to this hospital.\n",
     "  - Some people are not happy as they had a terrible experience.\n",
